--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -1,4 +1,3 @@
-# .github/workflows/docker-hub.yml
 name: Build and Push to Docker Hub
 
 on:
@@ -8,8 +7,9 @@ on:
 jobs:
   call-reusable:
     uses: ./.github/workflows/reusable-build.yml
+    secrets:
+      registry_password: ${{ secrets.DOCKERHUB_TOKEN }}
     with:
       registry: docker.io
       username: ${{ secrets.DOCKERHUB_USERNAME }}
-      password: ${{ secrets.DOCKERHUB_TOKEN }}
       image_namespace: ${{ secrets.DOCKERHUB_USERNAME }}
