--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -1,4 +1,3 @@
-# .github/workflows/reusable-build.yml
 name: Reusable Build and Push
 
 on:
@@ -10,12 +9,12 @@ on:
       username:
         required: true
         type: string
-      password:
-        required: true
-        type: string
       image_namespace:
         required: true
         type: string
+    secrets:
+      registry_password:
+        required: true
 
 jobs:
   build-and-push:
@@ -33,7 +32,7 @@ jobs:
       with:
         registry: ${{ inputs.registry }}
         username: ${{ inputs.username }}
-        password: ${{ inputs.password }}
+        password: ${{ secrets.registry_password }}
 
     - name: Extract short SHA
       id: extract_sha
